--- a/rental/templates/contact.html
+++ b/rental/templates/contact.html
@@ -3,20 +3,20 @@
 <div id="contact_div">
     <table>
         <tr>
-            <td>Phone number:</td>
-            <td>+36 30 968 4953</td>
+            <th>Phone number:</th>
+            <td>{{ contact.phone }}</td>
         </tr>
         <tr>
-            <td>Email:</td>
-            <td>takacsattila34@gmail.com</td>
+            <th>Email:</th>
+            <td>{{ contact.email }}</td>
         </tr>
         <tr>
-            <td>Address:</td>
-            <td>5400 Mezotur, Puskin utca 28</td>
+            <th>Address:</th>
+            <td>{{ contact.address }}</td>
         </tr>
         <tr>
-            <td>Opening hours:</td>
-            <td>12:00 - 20:00</td>
+            <th>Opening hours:</th>
+            <td>{{ contact.opening_hours }}</td>
         </tr>
     </table>
 </div>
