--- a/rental/static/style.css
+++ b/rental/static/style.css
@@ -8,7 +8,16 @@
   z-index: 999;
 }
 
-/* Style the links inside the navigation bar */
+.topnav ul {
+  display: inline;
+  list-style-type: none;
+}
+
+.topnav li {
+  float: left;
+  text-align: center;
+}
+
 .topnav a {
   float: left;
   color: #f2f2f2;
@@ -18,14 +27,12 @@
   font-size: 17px;
 }
 
-/* Change the color of links on hover */
-.topnav a:hover {
+.topnav li:hover {
   background-color: #ddd;
   color: black;
 }
 
-/* Add a color to the active/current link */
-.topnav a.active {
+.topnav li.active {
   background-color: #4CAF50;
   color: white;
 }
@@ -51,40 +58,75 @@
   left: 5%;
 }
 
+#home_div {
+  max-width: 60vw;
+}
+
+#home_div p {
+  font-size: 25px;
+  text-align: center;
+}
+
 #contact_div {
   top: 25%;
   left: 10%;
 }
 
-#home_div p {
-  font-size: 25px;
-}
-
-#contact_div table {
+#contact_div td, #contact_div th {
   font-size: 25px;
   text-align: left;
+  padding: 5px;
 }
 
 #machines_div {
   position: relative;
-  margin: 100px auto auto auto;
-  width: auto;
-  text-align: center;
+  max-width: 100%;
+  padding-top: 60px;
+  padding-left: 30px;
+  padding-right: 30px;
+ /* display: flex;  */
 }
 
-#machines_div table {
-  margin: auto;
-}
-
-#machines_div table th{
-  font-size: 25px;
-}
-
-#machines_div table td{
-  padding: 20px;
+.machine_container {
+  min-width: 300px;
+  max-width: 300px;
+  margin-left: 20px;
+  margin-right: 20px;
+  float: left;
+  overflow: hidden;
 }
 
 .machine_image {
-  width: 32.5vw;
+  width: 300px;
   height: auto;
+}
+
+.machine_name{
+  font-size: 25px;
+  font-weight: bold;
+  text-align: center;
+}
+
+#machine_div {
+  position: absolute;
+  top: 12%;
+  left: 5%;
+}
+
+#machine_div h2, #machine_div p {
+  text-align: left;
+  max-width: 90%;
+}
+
+#machine_div p, #machine_div th, #machine_div td {
+  font-size: 18px;
+}
+
+#machine_div table, #machine_div th, #machine_div td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+
+#machine_div th, #machine_div td {
+  padding: 2px;
 }
