--- a/rental/templates/machines.html
+++ b/rental/templates/machines.html
@@ -1,27 +1,15 @@
 {% extends 'base.html' %}
 {% block 'body' %}
 {% load static %}
-<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-<script src="{% static 'javascript.js' %}" type="text/javascript"></script>
 <div id="machines_div">
-    <table>
-        <tr>
-            <th>Carpet Cleaner</th>
-            <th>Dehumidifier</th>
-        </tr>
-        <tr>
-            <td><a href=""><img class="machine_image" src="{% static 'carpet_cleaner.jpg' %}" ></a></td>
-            <td><a href=""><img class="machine_image" src="{% static 'dehumidifier.jpg' %}" ></a></td>
-        </tr>
-        <tr>
-            <th>Carpet Cleaner</th>
-            <th>Dehumidifier</th>
-        </tr>
-        <tr>
-            <td><a href=""><img class="machine_image" src="{% static 'carpet_cleaner.jpg' %}" ></a></td>
-            <td><a href=""><img class="machine_image" src="{% static 'dehumidifier.jpg' %}" ></a></td>
-        </tr>
-    </table>
+
+        {% for machine in machine_list %}
+            <div class="machine_container">
+                <p class="machine_name">{{ machine.machine_name }}</p>
+                <p><a href="{% url 'machine' machine_id=machine.machine_id %}"><img class="machine_image" src="{{ machine.machine_image.url }}" ></a></p>
+            </div>
+        {% endfor %}
+    
 </div>
 <div id="machine_description">
 
